<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="app_name">AIO Downloader</string>
    <string name="mygames">My Games</string>
    <string name="mypaid">Free Paid Apps</string>
    <string name="full_app_name">All-in-One Downloader</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_desc">nav_desc</string>
    <string name="descr_image">Image</string>
    <string name="main_home">HOME</string>
    <string name="main_download">DOWNLOAD</string>
    <string name="main_file">FILES</string>
    <string name="main_recommend">POPULAR</string>
    <string name="hometv1">AIO Downloader</string>
    <string name="hometv2">The Ultimate Android Market</string>
    <string name="downloading">Downloading</string>
    <string name="files">Downloaded Files</string>
    <string name="recommend">Popular</string>
    <string name="reload">Reload</string>
    <string name="share">Share with friends</string>
    <string name="setting">Settings</string>
    <string name="features">Features Request</string>
    <string name="time">Sort by time</string>
    <string name="zimu">Sort by title</string>
    <string name="pause">Pause all</string>
    <string name="resume">Resume all</string>
    <string name="delete1">Delete all</string>
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_msg">We have new vesion available. Update now?</string>
    <string name="update_dialog_cancel">Not now</string>
    <string name="update_dialog_ok">OK</string>
    <string name="waitingtast">Waiting in queue</string>
    <string name="resumetask">Resume</string>
    <string name="starttask">Start</string>
    <string name="pausetask">Pause</string>
    <string name="completetask">Completed</string>
    <string name="retrytask">Retry</string>
    <string name="failtask">Failed</string>
    <string name="overtimetask">Failed to connect. Please try again.</string>
    <string name="showversion">Version 3.0.9</string>
    <string name="downloadsettings">Download Settings</string>
    <string name="cleanlocalcache">Clean Local Cache</string>
    <string name="checkforupdate">Check for Update</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="downloadsettingcontant">Download data via WIFI only to reduce data usage.</string>
    <string name="downloadpath">Storage Path</string>
    <string name="helpus">Please Help Us</string>
    <string name="helpshare">If you like this free tool, please help us by sharing it with friends.</string>
    <string name="prompt">Notice</string>
    <string name="networkcontact">No WIFI connection is found. All downloading tasks are paused automatically.</string>
    <string name="nointent">No internet connection is found. Check internet settings?</string>
    <string name="isexit">Quit the application?</string>
    <string name="yes">Quit</string>
    <string name="no">Cancel</string>
    <string name="delete">Delete this task?</string>
    <string name="mycancel">Cancel</string>
    <string name="mysure">Delete</string>
    <string name="str_back_twice_exit">Press again to quit</string>
    <string name="cleracache">Cleaning cache...</string>
    <string name="deletealldownloads">Are you sure to delete all tasks?</string>
    <string name="deleteall">Are you sure to delete all files?</string>
    <string name="deleteallapp">Are you sure to delete all APPs?</string>
    <string name="deleteallmp3">Are you sure to delete all MP3s?</string>
    <string name="deleteallringtone">Are you sure to delete all Ringtones?</string>
    <string name="deleteallvideo">Are you sure to delete all Videos?</string>
    <string name="downloadingnotice">Here is the list of downloading tasks. No downloading task is found at present.</string>
    <string name="appnotice">Here is the list of finished app downloads. No app is found at present.</string>
    <string name="videonotice">Here is the list of finished video downloads. No video is found at present.</string>
    <string name="mp3notice">Here is the list of finished mp3 downloads. No mp3 is found at present.</string>
    <string name="ringtonenotice">Here is the list of finished ringtone downloads. No ringtone is found at present.</string>
    <string name="standard">Standard ringtone</string>
    <string name="Contact">Contact ringtone</string>
    <string name="Notification">Notification ringtone</string>
    <string name="Alarm">Alarm sound</string>
    <string name="app">APP Downloader</string>
    <string name="mp3">MP3 Downloader</string>
    <string name="ringtone">Ringtone Downloader</string>
    <string name="video">YouTube Downloader</string>
    <string name="video2">Video Downloader</string>
    <string name="font">Font Downloader</string>
    <string name="manga">Manga Downloader</string>
    <string name="wallpaper">HD Wallpaper Downloader</string>
    <string name="movie">Movie Live Player</string>
    <string name="game">Mini Games</string>
    <string name="icon">Icons Downloader</string>
    <string name="hometip">1,600,000+ Apps &amp; Games for Android</string>
    <string name="downlaoderror">Connection time out. Please try again.</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="more">More</string>
    <string name="loading">Loading...</string>
    <string name="errordialog">Download Error</string>
    <string name="decription">dad sddsa dwerrf erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs Here is the list of downloading tasks. No downloading task is found at present fsfsdsxd sdsd Here is the list of finished video downloads. No video is found at present sdsd sds erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs fsfsdsxd Here is the list of finished ringtone downloads. No ringtone is found at present dad sddsa dwerrf erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs Here is the list of downloading tasks. No downloading task is found at present fsfsdsxd sdsd Here is the list of finished video downloads. No video is found at present sdsd sds erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs fsfsdsxd Here is the list of finished ringtone downloads. No ringtone is found at present dad sddsa dwerrf erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs Here is the list of downloading tasks. No downloading task is found at present fsfsdsxd sdsd Here is the list of finished video downloads. No video is found at present sdsd sds erefsfs fsfsdsxd sdsd sdsd sds dad sddsa dwerrf erefsfs fsfsdsxd Here is the list of finished ringtone downloads. No ringtone is found at present</string>
    <string name="mp3_ringtone_error">Failed to connect server. Please try again.</string>
    <string name="wallpapernotice">HD Wallpaper Downloader will appear as an independent APP. It will be downloaded now. Please activate it after download is finished.</string>
    <string name="message_image_desc">Message Image</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_new_conversation">新建会话</string>
    <string name="feedback_title">用户反馈</string>
    <string name="fb_fragment_activity">使用 SDK Fragment</string>
    <string name="sdk_fb_activity">使用 SDK Activity</string>
    <string name="multi_conversation_activity">多会话模式</string>
    <string name="title_item_list">反馈列表</string>
    <string name="exitdown">download(s) still active. Quit now?</string>
    <string name="exitcontinue">Continue to donwload after quit</string>
    <string name="videomoive">VIDEO &amp; MOVIE</string>
    <string name="appgame">App &amp; Game</string>
    <string name="updateinfo">"1. Add crack feature to download paid apps for free.
2. Add shuffle feature.
3. Improvements for reliability and speed."</string>
    <string name="zz">&lt;作者QQ：735191413></string>
    <string name="action_settings">Settings</string>
    <string name="wait_clean">To Be cleaned</string>
    <string name="laji">Junk File</string>
    <string name="zhengzaiqingli">Being cleaned...</string>
    <string name="qingliwangcheng">Complete cleanup</string>
    <string name="phononeicun">Phone memory:</string>
    <string name="todaynew">aa</string>
    <string name="umeng_fb_contact_info_hint">Email, MSN, Gtalk, or whatever we can find you.</string>
    <string name="umeng_fb_back">Back</string>
    <string name="umeng_fb_title">Feedback</string>
    <string name="umeng_fb_write_contact_title">Write contact Info</string>
    <string name="umeng_fb_change_contact_title">Change contact Info</string>
    <string name="umeng_fb_contact_info">Contact Info</string>
    <string name="umeng_fb_send">Send</string>
    <string name="umeng_fb_reply_content_default">Your precious feedback are appriciated.</string>
    <string name="umeng_fb_notification_ticker_text">Got new reply</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">New reply: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">You received %d new replies from the app developer.</string>
    <string name="umeng_fb_feedback">write something</string>
    <string name="umeng_fb_contact_save">Save</string>
    <string name="umeng_fb_time_right_now">Just now</string>
    <string name="umeng_fb_time_minutes_ago">%d minutes ago</string>
    <string name="umeng_fb_time_this_year_format">MM/dd HH:mm:ss</string>
    <string name="umeng_fb_time_pre_year_format">yy/MM/dd HH:mm:ss</string>
    <string name="umeng_fb_contact_qq">QQ</string>
    <string name="umeng_fb_contact_email">Email</string>
    <string name="umeng_fb_contact_phone">Phone</string>
    <string name="umeng_fb_contact_other">Other</string>
    <string name="umeng_fb_send_fail">Send fail</string>
    <string name="umeng_fb_sending">Sending…</string>
    <string name="umeng_fb_contact_key_qq">qq</string>
    <string name="umeng_fb_contact_key_email">email</string>
    <string name="umeng_fb_contact_key_phone">phone</string>
    <string name="umeng_fb_contact_key_other">plain</string>
    <string name="umeng_fb_press_speech">Hold to Talk</string>
    <string name="umeng_fb_release_send">Release to Send</string>
    <string name="umeng_fb_release_cancel">Release to cancel</string>
    <string name="umeng_fb_slide_up_cancel">Slide up to cancel</string>
    <string name="umeng_fb_record_time_short">Message too short</string>
    <string name="umeng_fb_count_down">Count down</string>
    <string name="umeng_fb_record_fail">Record fail</string>
    <string name="umeng_fb_no_record_permission">No permission of record</string>
</resources>
